fix : icon alignment inside active filter button

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-grid.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-grid.css
@@ -4610,7 +4610,7 @@ button.pswp__button--zoom:hover {
   margin-right: .5em;
   line-height: inherit;
   position: relative;
-  top: 0.07em;
+  top: 1px;
 }
 
 .woocommerce-terms-and-conditions {
