--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -3939,7 +3939,7 @@ button.pswp__button--zoom:hover {
 			margin-right: .5em;
 			line-height: inherit;
 			position: relative;
-			top: 0.07em;
+			top: 1px;
 		}
 	}
 }
